syntax = "proto3";

package keyauth.domain;
option go_package = "github.com/infraboard/keyauth/pkg/domain";

import "pkg/domain/pb/request.proto";
import "github.com/infraboard/mcube/cmd/protoc-gen-go-ext/extension/tag/tag.proto";

message Domain  {
    // 公司或者组织名称
    string name = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"_id" json:"name"'}
        ];
    // 创建时间
    int64 create_at = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"create_at" json:"create_at"'}
        ];
    // 更新时间
    int64 update_at = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"update_at" json:"update_at"'}
        ];
    // 域拥有者
    string owner = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"owner" json:"owner"'}
        ];
    // 域状态, 是否需要冻结该域, 冻结时, 该域下面所有用户禁止登录
    bool enabled = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"enabled" json:"enabled"'}
        ];
    // CreateDomainRequest 具体属性
    DomainProfile profile = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"profile" json:"profile"'}
        ];
    // SecuritySetting 域安全设置
    SecuritySetting security_setting = 7[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"security_setting" json:"security_setting"'}
        ];
}

message Set {
    int64 total = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"total" json:"total"'}
        ];
    repeated Domain items = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"items" json:"items"'}
        ];
}